# SearchEngineCPP

./: .gitignore
Configs/: config.ini
Search/: CMakeLists.txt  Config.cpp  Config.h  DBase.cpp  DBase.h  SearchServer.cpp  Spider.cpp  Spider.h  main.cpp  main_server.cpp  main_spider.cpp
